# bevy-WackyCrates

./: Cargo.toml  README.md
src/: consts.rs  main.rs
src/animations/: asset_loader.rs  mod.rs  player_animation_clips.rs  player_animation_state.rs  player_animations.rs  sprite_animation.rs
src/engine/: crate_spawner.rs  env_spawner.rs  game_runner.rs  mod.rs  physics.rs  player.rs  player_animation_state.rs  player_animations.rs  player_hitbox.rs  player_input.rs  player_physics.rs  sprite_animation.rs
src/environment/: crate_spawner.rs  environment_plugin.rs  mod.rs  platform_spawner.rs
src/game_ui/: main_menu.rs  mod.rs  ui_plugin.rs
