[package]
name = "WackyCrates"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.2.1"
bevy = "0.15.3"
leafwing-input-manager = "0.16.0"
rand = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
